# Lidar_pkg

./: README.md
lidar_pkg/lidar_control/: CMakeLists.txt  package.xml
lidar_pkg/lidar_control/config/: lidar_control.yaml
lidar_pkg/lidar_control/launch/: lidar_control.launch  lidar_rqt.launch  lidar_rqt.perspective
lidar_pkg/lidar_description/: CMakeLists.txt  package.xml
lidar_pkg/lidar_description/meshes/: Motor.dae  estructura.dae
lidar_pkg/lidar_description/urdf/: lidar.gazebo  lidar.xacro  lidar.xml
lidar_pkg/lidar_gazebo/: CMakeLists.txt  package.xml
lidar_pkg/lidar_gazebo/launch/: lidar_world.launch
lidar_pkg/lidar_gazebo/worlds/Cuarto/: model.config  model.sdf
lidar_pkg/lidar_src/: CMakeLists.txt  package.xml
lidar_pkg/lidar_src/scripts/: PID.py  lidarRanges.py  listener.py  main.py  scan.py
