<?xml version="1.0"?>
<package format="2">
  <name>lidar_control</name>
  <version>0.0.0</version>
  <description>The lidar_control package</description>

  <maintainer email="beermagni@gmail.com">berenice</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>effor_controllers</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rqt_gui</build_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>effor_controllers</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effor_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_gui</exec_depend>

  <export>
  </export>
</package>
