<?xml version="1.0"?>
<package format="2">
  <name>lidar_description</name>
  <version>0.0.0</version>
  <description>The lidar_description package</description>

  <maintainer email="beermagni@gmail.com">berenice</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
