<?xml version="1.0"?>
<package format="2">
  <name>lidar_gazebo</name>
  <version>0.0.0</version>
  <description>The lidar_gazebo package</description>

  <maintainer email="beermagni@gmail.com">berenice</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>lidar_control</build_depend>
  <build_depend>lidar_description</build_depend>
  <build_depend>xacro</build_depend>

  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>lidar_control</build_export_depend>
  <build_export_depend>lidar_description</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>lidar_control</exec_depend>
  <exec_depend>lidar_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
